--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -249,7 +249,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "确诊率", '2_7');
+            barchart(csvdata.slice(0,21), "确诊率", '2_7', 0.007);
         }
     });
 
@@ -265,7 +265,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "检测率", '2_9');
+            barchart(csvdata.slice(0,21), "检测率", '2_9', 0.18);
         }
     });
 
@@ -273,7 +273,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "阳性率", '2_10');
+            barchart(csvdata.slice(0,21), "阳性率", '2_10', 0.80);
         }
     });
 
