--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -48,70 +48,86 @@
         ——上周确诊增速最快国家：<span class="26"><font>&nbsp;Null&nbsp;</font></span>（<span class="27"><font>&nbsp;Null&nbsp;</font></span>）、<span class="28"><font>&nbsp;Null&nbsp;</font></span>（<span class="29"><font>&nbsp;Null&nbsp;</font></span>） <br>
         ——上周死亡增速最快国家：<span class="30"><font>&nbsp;Null&nbsp;</font></span>（<span class="31"><font>&nbsp;Null&nbsp;</font></span>）、<span class="32"><font>&nbsp;Null&nbsp;</font></span>（<span class="33"><font>&nbsp;Null&nbsp;</font></span>） <br>
     </div>
+    <div class="text_to_save">
+        <div>
+            <h3>全球疫情发展大数据分析周报</h3>
+            （<span class="start_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="start_date_day"><font>&nbsp;Null&nbsp;</font></span>日—<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）
+            <br>
+            2020年<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日
+        </div>
+        <h3>2.1 全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
+        主要分布在<span class="2_1_countries"><font>&nbsp;Null&nbsp;</font></span>。
+        <div id="2_1" style="width: 800px;height:470px;"></div>
+        <div>图 2-1&nbsp;全球累计确诊分布图</div>
+        <div id="2_2" style="width: 800px;height:470px;"></div>
+        <div>图 2-2&nbsp;全球累计死亡分布图</div>
+        <hr>
+        <div class="row" style="width: 800px;">
+            <div id="2_3_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_3_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div class="col-6" style="text-align: center;">(a)</div>
+            <div class="col-6" style="text-align: center;">(b)</div>
+            <div>图2-3&nbsp;全球累计确诊人数增长曲线（a）、累计死亡人数增长曲线（b）</div>
+        </div>
+        <div class="row" style="width: 800px;">
+            <div id="2_4_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_4_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div class="col-6" style="text-align: center;">(a)</div>
+            <div class="col-6" style="text-align: center;">(b)</div>
+            <div>图2-4&nbsp;全球确诊率增长曲线（a）、病死率增长曲线（b）</div>
+            <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计死亡人数占累计确诊人数的百分比。</div>
+        </div>
+        <div id="2_5" style="width: 800px;height:430px;"></div>
+        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div id="2_6" style="width: 800px;height:430px;"></div>
+        <div>图 2-6&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
 
-    <h3>2.1 全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
-    主要分布在 <span class="2_1_countries"><font>&nbsp;Null&nbsp;</font></span>。
-    <div id="2_1" style="width: 800px;height:470px;"></div>
-    <div>图 2-1&nbsp;全球累计确诊分布图（截至 <span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月 <span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）</div>
-    <div id="2_2" style="width: 800px;height:470px;"></div>
-    <div>图 2-2&nbsp;全球累计死亡分布图（截至 <span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月 <span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）</div>
-    <hr>
-    <div class="row" style="width: 800px;">
-        <div id="2_3_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-        <div id="2_3_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-        <div class="col-6" style="text-align: center;">(a)</div>
-        <div class="col-6" style="text-align: center;">(b)</div>
-        <div>图2-3&nbsp;全球累计确诊人数增长曲线（a）、累计死亡人数增长曲线（b）</div>
+        <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
+        <h3>2.2 全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <div id="2_7" style="width: 800px;height:880px;"></div>
+        <div>图2-7&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
+        <div id="2_8" style="width: 800px;height:880px;"></div>
+        <div>图2-8&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
+        <div id="2_9" style="width: 800px;height:880px;"></div>
+        <div>图2-9&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
+        <div id="2_10" style="width: 800px;height:880px;"></div>
+        <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
+
+        <h3>2.3 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
+        <div id="2_11" style="width: 800px;height:500px;"></div>
+        <div>图2-11&nbsp;本周全球每日新增确诊人数和新增死亡人数</div>
+
+        <h3>2.4&nbsp;本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <div id="2_12" style="width: 800px;height:430px;"></div>
+        <div>图2-12&nbsp;本周全球新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+
+        <h3>2.5&nbsp;本周新增死亡主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <div id="2_13" style="width: 800px;height:430px;"></div>
+        <div>图2-13&nbsp;本周全球新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+
+        <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增死亡增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <div id="2_14" style="width: 800px;"></div>
+        <div>图2-14&nbsp;本周较上周新增确诊人数增速（仅显示增速绝对值大于等于20%的国家）</div>
+        <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
+
+        <div id="2_15" style="width: 800px;"></div>
+        <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示增速绝对值大于等于20%的国家）</div>
+        <div>注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数</div>
+
+        <h3>附录</h3>
+        <div id="2_16" style="width: 800px;height:850px;"></div>
+        <div>图2-16&nbsp;各国总检测数（截止至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日，仅显示累计确诊人数超过2000的国家中总检测数前20个国家，部分国家检测数据更新不及时）</div>
+        <div id="2_17" style="width: 800px;"></div>
+        <div>
+            图2-17&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
+            注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数
+        </div>
+        <div id="2_18" style="width: 800px;"></div>
+        <div>
+            图2-18&nbsp;本周较上周新增死亡人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
+            注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数
+        </div>
     </div>
-    <div class="row" style="width: 800px;">
-        <div id="2_4_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-        <div id="2_4_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-        <div class="col-6" style="text-align: center;">(a)</div>
-        <div class="col-6" style="text-align: center;">(b)</div>
-        <div>图2-4&nbsp;全球确诊率增长曲线（a）、病死率增长曲线（b）</div>
-        <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计死亡人数占累计确诊人数的百分比。</div>
-    </div>
-    <div id="2_5" style="width: 800px;height:430px;"></div>
-    <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据，截至 <span class= "end_date_month"><font>&nbsp;Null&nbsp;</font></span>月 <span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）</div>
-    <div id="2_6" style="width: 800px;height:430px;"></div>
-    <div>图 2-6&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据，截至 <span class= "end_date_month"><font>&nbsp;Null&nbsp;</font></span>月 <span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）</div>
-
-    <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
-    <h3>2.2 全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
-    <div id="2_7" style="width: 800px;height:880px;"></div>
-    <div>图2-7&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
-    <div id="2_8" style="width: 800px;height:880px;"></div>
-    <div>图2-8&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
-    <div id="2_9" style="width: 800px;height:880px;"></div>
-    <div>图2-9&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
-    <div id="2_10" style="width: 800px;height:880px;"></div>
-    <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
-
-    <h3>2.3 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
-    <div id="2_11" style="width: 800px;height:500px;"></div>
-    <div>图2-11&nbsp;本周全球每日新增确诊人数和新增死亡人数</div>
-
-    <h3>2.4&nbsp;本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
-    <div id="2_12" style="width: 800px;height:430px;"></div>
-    <div>图2-12&nbsp;本周全球新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
-
-    <h3>2.5&nbsp;本周新增死亡主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
-    <div id="2_13" style="width: 800px;height:430px;"></div>
-    <div>图2-13&nbsp;本周全球新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
-
-    <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增死亡增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
-    <div id="2_14" style="width: 800px;"></div>
-    <div>图2-14&nbsp;本周较上周新增确诊人数增速（仅显示增速绝对值大于等于20%的国家）</div>
-    <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
-
-    <div id="2_15" style="width: 800px;"></div>
-    <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示增速绝对值大于等于20%的国家）</div>
-    <div>注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数</div>
-
-    <h3>附录</h3>
-    <div id="2_16" style="width: 800px;height:850px;"></div>
-    <div id="2_17" style="width: 800px;"></div>
-    <div id="2_18" style="width: 800px;"></div>
 </div>
 
 <script>
@@ -333,9 +349,11 @@
         if (modify_images){
             modify_images = false;
             console.log(imagesInfo);
-            $.post('{% url "saveImage" %}',{'baseimg': imagesInfo['2_5'] },function (result, statue) {  //JSON.stringify({'2_5':imagesInfo['2_5']})
+            $.post('{% url "saveImage" %}',{'baseimg': JSON.stringify(imagesInfo), 'text': $(".text_to_save").text() },function (result, statue) {  //JSON.stringify({'2_5':imagesInfo['2_5']})
                 if (!result.result){
                     alert(result.error)
+                }else{
+                    alert("已自动下载所有图片及文本至服务端")
                 }
             });
         }else{
