--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -3,7 +3,7 @@
 {% load static %}
 <head>
     <meta charset="UTF-8">
-    <title>Vis for COVID</title>
+    <title>疫情周报</title>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -118,7 +118,7 @@
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
         <div id="2_15" style="width: 800px;"></div>
-        <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示增速绝对值大于等于20%的国家）</div>
+        <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示累计死亡人数超过100的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数</div>
 
         <h3>附录</h3>
