--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -7,22 +7,21 @@
 
 </head>
 <body>
-
-    <h2>文件上传</h2>
-    <form method="post" action="{% url 'report' %}" enctype="multipart/form-data" style="padding-left: 20px;">
-        {% csrf_token %}
-        疫情数据Excel文件上传<br><br>
-        <input type="file" name="wxb_file" accept=".xlsx"/>
-        <hr>
-        全球确诊数及死亡数分布数据csv文件上传：
-        （点击此链接下载：<a href="https://covid.ourworldindata.org/data/owid-covid-data.csv">ourworldindata</a>）
-        <br><br>
-        <input type="file" name="ourworldindata" accept=".csv"/>
-        <br><hr>
-        <input type="submit" value="提交"/>
-        <br><br><br>
-        <hr>
-    </form>
+    <div style="margin-left: 30px;">
+        <h2>文件上传</h2>
+        <form method="post" action="{% url 'report' %}" enctype="multipart/form-data" style="padding-left: 20px;">
+            {% csrf_token %}
+            疫情数据Excel文件上传<br><br>
+            <input type="file" name="wxb_file" accept=".xlsx"/>
+            <hr>
+            全球确诊数及死亡数分布数据csv文件上传：
+            （点击此链接下载：<a href="https://covid.ourworldindata.org/data/owid-covid-data.csv">ourworldindata</a>）
+            <br><br>
+            <input type="file" name="ourworldindata" accept=".csv"/>
+            <br><hr>
+            <input type="submit" value="提交"/>
+        </form>
+    </div>
 <!--
     <h2>文件夹上传</h2>
     使用中间csv数据生成报告：
