--- a/main/templates/dataprocess.html
+++ b/main/templates/dataprocess.html
@@ -56,13 +56,11 @@
 
 <div class="container">
     <div class="row" >
-        <div class="col-sm">
-            <h2>
-                json
-            </h2>
+        <div class="col-sm-9">
+
         </div>
 
-        <div class="col-sm">
+        <div class="col-sm-3">
             33
         </div>
 
