Modification of colour scheme

--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -29,6 +29,12 @@
             color: red;
             font-weight: bold;
         }
+        .red {
+            background-color: lightcoral;
+        }
+        .green {
+            background-color: lightgreen;
+        }
     </style>
 </head>
 <body>
@@ -38,6 +44,7 @@
 </div>
 <div class="container">
     <div>
+{#        注：<span class="red">红色背景表示新增</span>，<span class="green">绿色背景表示修改</span><br>#}
         <h3>一周疫情关键数据（<span class="start_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="start_date_day"><font>&nbsp;Null&nbsp;</font></span>日
             —<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）</h3>
         ——当前全球确诊数量：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例 <br>
