--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -72,7 +72,7 @@
             全球累计确诊已达<span class="wan_2"><font>&nbsp;Null&nbsp;</font></span>万，病死<span class="wan_3"><font>&nbsp;Null&nbsp;</font></span>万。<br>
             本周全球确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，新增确诊较上周<span class="15"><font>&nbsp;Null&nbsp;</font></span>。<br>
             本周全球死亡<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，新增死亡较上周<span class="17"><font>&nbsp;Null&nbsp;</font></span>。<br>
-            本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="end_date_hour"><font>&nbsp;Null&nbsp;</font></span>时<font><span class="end_date_min"><font>&nbsp;Null&nbsp;</font></span>分。
+            本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="end_date_hour"><font>&nbsp;Null&nbsp;</font></span>时<span class="end_date_min"><font>&nbsp;Null&nbsp;</font></span>分。
         </div>
         <h3>2. 全球疫情现况</h3>
         <h3>2.1 全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
