死亡改成病死，总检测数改成累计检测数

--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -48,18 +48,18 @@
         <h3>一周疫情关键数据（<span class="start_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="start_date_day"><font>&nbsp;Null&nbsp;</font></span>日
             —<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日）</h3>
         ——当前全球确诊数量：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例 <br>
-        ——当前全球死亡数量：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例 <br>
+        ——当前全球病死数量：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例 <br>
         ——当前全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span> <br>
         ——当前全球病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span> <br>
         ——当前全球确诊最多国家：<span class="6"><font>&nbsp;Null&nbsp;</font></span>（<span class="7"><font>&nbsp;Null&nbsp;</font></span>例）、<span class="8"><font>&nbsp;Null&nbsp;</font></span>（<span class="9"><font>&nbsp;Null&nbsp;</font></span>例） <br>
-        ——当前全球死亡最多国家：<span class="10"><font>&nbsp;Null&nbsp;</font></span>（<span class="11"><font>&nbsp;Null&nbsp;</font></span>例）、<span class="12"><font>&nbsp;Null&nbsp;</font></span>（<span class="13"><font>&nbsp;Null&nbsp;</font></span>例） <br>
+        ——当前全球病死最多国家：<span class="10"><font>&nbsp;Null&nbsp;</font></span>（<span class="11"><font>&nbsp;Null&nbsp;</font></span>例）、<span class="12"><font>&nbsp;Null&nbsp;</font></span>（<span class="13"><font>&nbsp;Null&nbsp;</font></span>例） <br>
 
         ——上周全球确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，比前一周<span class="15"><font>&nbsp;Null&nbsp;</font></span> <br>
-        ——上周全球死亡<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，比前一周<span class="17"><font>&nbsp;Null&nbsp;</font></span> <br>
+        ——上周全球病死<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，比前一周<span class="17"><font>&nbsp;Null&nbsp;</font></span> <br>
         ——上周确诊最多国家：<span class="18"><font>&nbsp;Null&nbsp;</font></span>（<span class="19"><font>&nbsp;Null&nbsp;</font></span>例）、<span class="20"><font>&nbsp;Null&nbsp;</font></span>（<span class="21"><font>&nbsp;Null&nbsp;</font></span>例） <br>
-        ——上周死亡最多国家：<span class="22"><font>&nbsp;Null&nbsp;</font></span>（<span class="23"><font>&nbsp;Null&nbsp;</font></span>例）、<span class="24"><font>&nbsp;Null&nbsp;</font></span>（<span class="25"><font>&nbsp;Null&nbsp;</font></span>例） <br>
+        ——上周病死最多国家：<span class="22"><font>&nbsp;Null&nbsp;</font></span>（<span class="23"><font>&nbsp;Null&nbsp;</font></span>例）、<span class="24"><font>&nbsp;Null&nbsp;</font></span>（<span class="25"><font>&nbsp;Null&nbsp;</font></span>例） <br>
         ——上周确诊增速最快国家：<span class="26"><font>&nbsp;Null&nbsp;</font></span>（<span class="27"><font>&nbsp;Null&nbsp;</font></span>）、<span class="28"><font>&nbsp;Null&nbsp;</font></span>（<span class="29"><font>&nbsp;Null&nbsp;</font></span>） <br>
-        ——上周死亡增速最快国家：<span class="30"><font>&nbsp;Null&nbsp;</font></span>（<span class="31"><font>&nbsp;Null&nbsp;</font></span>）、<span class="32"><font>&nbsp;Null&nbsp;</font></span>（<span class="33"><font>&nbsp;Null&nbsp;</font></span>） <br>
+        ——上周病死增速最快国家：<span class="30"><font>&nbsp;Null&nbsp;</font></span>（<span class="31"><font>&nbsp;Null&nbsp;</font></span>）、<span class="32"><font>&nbsp;Null&nbsp;</font></span>（<span class="33"><font>&nbsp;Null&nbsp;</font></span>） <br>
     </div>
     <div class="text_to_save">
         <div>
@@ -71,23 +71,23 @@
             <h3>本周疫情要点</h3>
             全球累计确诊已达<span class="wan_2"><font>&nbsp;Null&nbsp;</font></span>万，病死<span class="wan_3"><font>&nbsp;Null&nbsp;</font></span>万。<br>
             全球本周确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，新增确诊较上周<span class="15"><font>&nbsp;Null&nbsp;</font></span>。<br>
-            全球本周死亡<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，新增死亡较上周<span class="17"><font>&nbsp;Null&nbsp;</font></span>。<br>
-            本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="36"><font>&nbsp;Null&nbsp;</font></span>时<span class="37"><font>&nbsp;Null&nbsp;</font></span>分。
+            全球本周病死<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，新增病死较上周<span class="17"><font>&nbsp;Null&nbsp;</font></span>。<br>
+            注：本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="36"><font>&nbsp;Null&nbsp;</font></span>时<span class="37"><font>&nbsp;Null&nbsp;</font></span>分。
         </div>
-        <h3>2. 全球疫情现况</h3>
-        <h3>2.1 全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
+        <h3>2.&nbsp;全球疫情现况</h3>
+        <h3>2.1&nbsp;全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
         主要分布在<span class="2_1_countries"><font>&nbsp;Null&nbsp;</font></span>。
         <div id="2_1" style="width: 800px;height:470px;"></div>
         <div>图 2-1&nbsp;全球累计确诊分布图</div>
         <div id="2_2" style="width: 800px;height:470px;"></div>
-        <div>图 2-2&nbsp;全球累计死亡分布图</div>
+        <div>图 2-2&nbsp;全球累计病死分布图</div>
         <hr>
         <div class="row" style="width: 800px;">
             <div id="2_3_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div id="2_3_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div class="col-6" style="text-align: center;">(a)</div>
             <div class="col-6" style="text-align: center;">(b)</div>
-            <div>图2-3&nbsp;全球累计确诊人数增长曲线（a）、累计死亡人数增长曲线（b）</div>
+            <div>图2-3&nbsp;全球累计确诊人数增长曲线（a）、累计病死人数增长曲线（b）</div>
         </div>
         <div class="row" style="width: 800px;">
             <div id="2_4_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
@@ -95,61 +95,61 @@
             <div class="col-6" style="text-align: center;">(a)</div>
             <div class="col-6" style="text-align: center;">(b)</div>
             <div>图2-4&nbsp;全球确诊率增长曲线（a）、病死率增长曲线（b）</div>
-            <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计死亡人数占累计确诊人数的百分比。</div>
+            <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计病死人数占累计确诊人数的百分比。</div>
         </div>
         
         <div id="2_5" style="width: 800px;height:430px;"></div>
-        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
         <div id="2_6" style="width: 800px;height:430px;"></div>
-        <div>图 2-6&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div>图 2-6&nbsp;全球累计病死人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
-        <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
-        <h3>2.2 全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
+        <h3>2.2&nbsp;全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_7" style="width: 800px;height:880px;"></div>
         <div>图2-7&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
         <div id="2_8" style="width: 800px;height:880px;"></div>
-        <div>图2-8&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
+        <div>图2-8&nbsp;各国病死率（病死率为累计病死人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
         <div id="2_9" style="width: 800px;height:880px;"></div>
-        <div>图2-9&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
+        <div>图2-9&nbsp;各国检测率（检测率为累计检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
         <div id="2_10" style="width: 800px;height:880px;"></div>
-        <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
+        <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占累计检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
 
-        <h3>2.3 全球本周新增确诊：<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
+        <h3>2.3&nbsp;全球本周新增确诊：<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
         <div class="row" style="width: 800px;">
             <div id="2_11_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div id="2_11_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div class="col-6" style="text-align: center;">(a)</div>
             <div class="col-6" style="text-align: center;">(b)</div>
-            <div>图2-11&nbsp;全球本周新增确诊人数增长曲线（a）、新增死亡人数增长曲线（b）</div>
+            <div>图2-11&nbsp;全球本周新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
         <h3>2.4&nbsp;全球本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_12" style="width: 800px;height:430px;"></div>
         <div>图2-12&nbsp;全球本周新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
-        <h3>2.5&nbsp;全球本周新增死亡主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <h3>2.5&nbsp;全球本周新增病死主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_13" style="width: 800px;height:430px;"></div>
-        <div>图2-13&nbsp;全球本周新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div>图2-13&nbsp;全球本周新增病死人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
-        <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增死亡增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增病死增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_14" style="width: 800px;"></div>
         <div>图2-14&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
         <div id="2_15" style="width: 800px;"></div>
-        <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示累计死亡人数超过300的国家中增速绝对值大于等于20%的国家）</div>
-        <div>注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数</div>
-        <h3>2.7&nbsp;全球新增确诊和新增死亡走势图</h3>
+        <div>图2-15&nbsp;本周较上周新增病死人数增速（仅显示累计病死人数超过300的国家中增速绝对值大于等于20%的国家）</div>
+        <div>注：本周较上周新增病死人数增速=（本周新增病死人数-上周新增病死人数）/上周新增病死人数</div>
+        <h3>2.7&nbsp;全球新增确诊和新增病死走势图</h3>
         <div class="row" style="width: 800px;">
             <div id="2_16_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div id="2_16_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div class="col-6" style="text-align: center;">(a)</div>
             <div class="col-6" style="text-align: center;">(b)</div>
-            <div>图2-16&nbsp;全球新增确诊人数增长曲线（a）、新增死亡人数增长曲线（b）</div>
+            <div>图2-16&nbsp;全球新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
 
         <h3>附录</h3>
         <div id="2_17" style="width: 800px;height:850px;"></div>
-        <div>图2-17&nbsp;各国总检测数（仅显示累计确诊人数超过2000的国家中总检测数前20个国家，部分国家检测数据更新不及时）</div>
+        <div>图2-17&nbsp;各国累计检测数（仅显示累计确诊人数超过2000的国家中累计检测数前20个国家，部分国家检测数据更新不及时）</div>
         <!-- <div id="2_18" style="width: 800px;"></div>
         <div>
             图2-18&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
@@ -157,8 +157,8 @@
         </div>
         <div id="2_19" style="width: 800px;"></div>
         <div>
-            图2-19&nbsp;本周较上周新增死亡人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
-            注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数
+            图2-19&nbsp;本周较上周新增病死人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
+            注：本周较上周新增病死人数增速=（本周新增病死人数-上周新增病死人数）/上周新增病死人数
         </div> -->
     </div>
 </div>
@@ -215,7 +215,7 @@
                 }else if (data_format.cases_3.includes(index)){
                     cases_3.push(data);
                 }else if (!data){
-                    return 
+                    return;
                 }
                 $("."+index).text(data);
             });
@@ -233,7 +233,7 @@
                 if(error){
                     console.log(error);
                 }else{
-                    worldMap(csvdata, '累计死亡人数', '2_2', $(".11").text().replace(/,/g,""));
+                    worldMap(csvdata, '累计病死人数', '2_2', $(".11").text().replace(/,/g,""));
                     text = $(".text_to_save").text();
                 }
             });
@@ -300,7 +300,7 @@
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "累计死亡人数", "2_6");
+            pieChart(csvdata, "累计病死人数", "2_6");
         }
     });
 
@@ -318,7 +318,7 @@
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "本周新增死亡人数", "2_13");
+            pieChart(csvdata, "本周新增病死人数", "2_13");
         }
     });
 
@@ -358,14 +358,14 @@
         if(error){
             console.log(error);
         }else{
-            linechart_num(csvdata, '2_11_a');
+            linechart_num_week(csvdata, '2_11_a');
         }
     });
     d3.csv("{% static export_dir|add:'2-11-b.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            linechart_num(csvdata, '2_11_b');
+            linechart_num_week(csvdata, '2_11_b');
         }
     });
 
@@ -381,7 +381,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_15");
+            bi_directional_barchart(csvdata, "本周较上周新增病死人数增速", "2_15");
         }
     });
 
@@ -397,7 +397,7 @@
     //     if(error){
     //         console.log(error);
     //     }else{
-    //         bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_19");
+    //         bi_directional_barchart(csvdata, "本周较上周新增病死人数增速", "2_19");
     //     }
     // });
 
@@ -405,7 +405,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart_num(csvdata.slice(0,20), "总检测数", '2_17');
+            barchart_num(csvdata.slice(0,20), "累计检测数", '2_17');
         }
     });
     var flag = true;
