change filtering criterion

--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -139,7 +139,7 @@
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
         <div id="2_16" style="width: 800px;"></div>
-        <div>图2-16&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万且本周新增确诊人数超过500的国家中增速绝对值大于等于20%的国家）</div>
+        <div>图2-16&nbsp;本周较上周新增确诊人数增速（仅显示累计病死人数超过300且本周新增病死人数超过100的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增病死人数增速=（本周新增病死人数-上周新增病死人数）/上周新增病死人数</div>
         <h3>2.7&nbsp;全球新增确诊和新增病死走势图</h3>
         <div class="row" style="width: 800px;">
