update template.docx and report.html

--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -72,7 +72,7 @@
             全球累计确诊已达<span class="wan_2"><font>&nbsp;Null&nbsp;</font></span>万，病死<span class="wan_3"><font>&nbsp;Null&nbsp;</font></span>万。<br>
             全球本周确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，新增确诊较上周<span class="15"><font>&nbsp;Null&nbsp;</font></span>。<br>
             全球本周病死<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，新增病死较上周<span class="17"><font>&nbsp;Null&nbsp;</font></span>。<br>
-            注：本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="36"><font>&nbsp;Null&nbsp;</font></span>时<span class="37"><font>&nbsp;Null&nbsp;</font></span>分。
+            注：本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="36"><font>&nbsp;Null&nbsp;</font></span>时<span class="37"><font>&nbsp;Null&nbsp;</font></span>分，其中中国数据包含港澳台，法国数据包括法国养老院数据。
         </div>
         <h3>2.&nbsp;全球疫情现况</h3>
         <h3>2.1&nbsp;全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
@@ -99,9 +99,9 @@
         </div>
         
         <div id="2_5" style="width: 800px;height:430px;"></div>
-        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前15个国家）</div>
         <div id="2_6" style="width: 800px;height:430px;"></div>
-        <div>图 2-6&nbsp;全球累计病死人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div>图 2-6&nbsp;全球累计病死人数来源构成（显示前15个国家）</div>
 
         <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
         <h3>2.2&nbsp;全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
@@ -110,7 +110,7 @@
         <div id="2_8" style="width: 800px;height:880px;"></div>
         <div>图2-8&nbsp;各国病死率（病死率为累计病死人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
         <div id="2_9" style="width: 800px;height:880px;"></div>
-        <div>图2-9&nbsp;各国治愈率（检测率为累计治愈数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家数据更新不及时）</div>
+        <div>图2-9&nbsp;各国治愈率（治愈率为累计治愈数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中治愈率前20个国家，部分国家数据更新不及时）</div>
 
         <div id="2_10" style="width: 800px;height:880px;"></div>
         <div>图2-10&nbsp;各国检测率（检测率为累计检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家数据更新不及时）</div>
@@ -127,11 +127,11 @@
         </div>
         <h3>2.4&nbsp;全球本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_13" style="width: 800px;height:430px;"></div>
-        <div>图2-13&nbsp;全球本周新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div>图2-13&nbsp;全球本周新增确诊人数来源构成（显示前15个国家）</div>
 
         <h3>2.5&nbsp;全球本周新增病死主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_14" style="width: 800px;height:430px;"></div>
-        <div>图2-14&nbsp;全球本周新增病死人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div>图2-14&nbsp;全球本周新增病死人数来源构成（显示前15个国家）</div>
 
         <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增病死增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_15" style="width: 800px;"></div>
