--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -135,7 +135,7 @@
 
         <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增病死增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_15" style="width: 800px;"></div>
-        <div>图2-15&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万且本周新增确诊人数超过500的国家中增速绝对值大于等于20%的国家</div>
+        <div>图2-15&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万且本周新增确诊人数超过500的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
         <div id="2_16" style="width: 800px;"></div>
